Update Flood Prediction (The City of Lagos).ipynb

--- a/Flood Prediction (The City of Lagos).ipynb
+++ b/Flood Prediction (The City of Lagos).ipynb
@@ -1778,7 +1778,7 @@
     }
    ],
    "source": [
-    "# Load the data with date parsing\n",
+    "# Load the data\n",
     "forc_data1 = pd.read_csv(\"Lagos 2024-07-08 to 2024-08-08.csv\")\n",
     "forc_data1.head(3)"
    ]
